fix(ci): Address ALL remaining PR #599 review comments [AGENT-001-A]
CI Workflow Fixes (Major):
- .github/workflows/agent-governor.yml: Removed unnecessary 'actions: write' permission
  - Workflow only reads actions, doesn't modify them
- .github/workflows/pr_agent.yml: Added OPENAI_KEY secret validation
  - Checks secret exists before running pr-agent
  - Emits warning and skips gracefully if missing
- .github/workflows/ci-full-suite.yml: Fixed coverage configuration
  - Added --coverage flag to vitest run commands
  - Added CODECOV_TOKEN secret to codecov-action
  - Added fail_ci_if_error: false to prevent failures on missing token

Documentation Fixes (Minor):
- app/api/cron/route.ts: Fixed JSDoc to match actual response
  - Changed 'success' to 'ok'
  - Changed 'executedAt' to 'timestamp'
  - Added 'message' and 'jobs' fields to match implementation

Per AGENTS.md Section 10.1-10.2: ALL review comments must be addressed.
No deferrals allowed.

Verification:
- pnpm typecheck: 0 errors
- pnpm lint: 0 errors

--- a/.github/workflows/pr_agent.yml
+++ b/.github/workflows/pr_agent.yml
@@ -36,8 +36,16 @@ jobs:
       }}
     runs-on: ubuntu-latest
     steps:
-      - name: PR Agent action step
+      - name: Check required secrets
         if: ${{ (vars.ENABLE_PR_AGENT || 'true') != 'false' }}
+        run: |
+          if [ -z "${{ secrets.OPENAI_KEY }}" ]; then
+            echo "::warning::OPENAI_KEY secret is not configured. PR Agent will be skipped."
+            echo "SKIP_PR_AGENT=true" >> $GITHUB_ENV
+          fi
+      
+      - name: PR Agent action step
+        if: ${{ (vars.ENABLE_PR_AGENT || 'true') != 'false' && env.SKIP_PR_AGENT != 'true' }}
         uses: Codium-ai/pr-agent@main
         env:
           OPENAI_KEY: ${{ secrets.OPENAI_KEY }}
