--- a/.github/workflows/ci-full-suite.yml
+++ b/.github/workflows/ci-full-suite.yml
@@ -89,7 +89,7 @@ jobs:
         run: pnpm install --frozen-lockfile
       
       - name: Run server tests (shard ${{ matrix.shard }})
-        run: pnpm vitest run --project=server --shard=${{ matrix.shard }} --reporter=dot
+        run: pnpm vitest run --project=server --shard=${{ matrix.shard }} --reporter=dot --coverage
         env:
           NODE_ENV: test
       
@@ -97,9 +97,11 @@ jobs:
         if: matrix.shard == '1/4'
         uses: codecov/codecov-action@v4
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage/coverage-final.json
           flags: server
           name: server-tests
+          fail_ci_if_error: false
 
   test-client:
     name: Tests (Client)
@@ -126,7 +128,7 @@ jobs:
         run: pnpm install --frozen-lockfile
       
       - name: Run client tests (shard ${{ matrix.shard }})
-        run: pnpm vitest run --project=client --shard=${{ matrix.shard }} --reporter=dot
+        run: pnpm vitest run --project=client --shard=${{ matrix.shard }} --reporter=dot --coverage
         env:
           NODE_ENV: test
       
@@ -134,9 +136,11 @@ jobs:
         if: matrix.shard == '1/2'
         uses: codecov/codecov-action@v4
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage/coverage-final.json
           flags: client
           name: client-tests
+          fail_ci_if_error: false
 
   # NOTE: Model tests are now included in the "server" project in vitest.config.ts
   # This job runs a subset filter for model-specific tests
