fix(ci): resolve 6 CI failures [AGENT-001-A] [PR-601]
P0 Fixes:
- lib/mongo.ts: Move env-guard await into .then() chain (fixes tsx CJS compile)
- e2e-tests.yml: Quote \ to fix SC2086 shellcheck

P1 Fixes:
- check-route-references.ts: Add ALLOWED_REDIRECT_PATTERNS for /fm/:path*
- public/sw.js: Change /fm/offline to /offline (actual page location)
- ai/ -> lib/ai-embeddings/: Rename folder to avoid Vercel AI SDK conflict
- Update 3 imports: kb/ingest.ts, scripts/kb-change-stream.ts, api/help/ask/route.ts

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -128,7 +128,7 @@ jobs:
           # Replace colons with hyphens for artifact names (GitHub rejects colons)
           SANITIZED="${{ matrix.project }}"
           SANITIZED="${SANITIZED//:/-}"
-          echo "project_name=${SANITIZED}" >> $GITHUB_OUTPUT
+          echo "project_name=${SANITIZED}" >> "$GITHUB_OUTPUT"
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -151,7 +151,7 @@ jobs:
 
       - name: Get Playwright version
         id: playwright-version
-        run: echo "version=$(pnpm list @playwright/test --depth=0 --json | jq -r '.[0].devDependencies["@playwright/test"].version')" >> $GITHUB_OUTPUT
+        run: echo "version=$(pnpm list @playwright/test --depth=0 --json | jq -r '.[0].devDependencies["@playwright/test"].version')" >> "$GITHUB_OUTPUT"
 
       - name: Cache Playwright browsers
         uses: actions/cache@v4
