fix(ci): shellcheck SC2086 + add featureInProgress i18n key [AGENT-001-A]

--- a/.github/workflows/verify-prod-env.yml
+++ b/.github/workflows/verify-prod-env.yml
@@ -87,7 +87,7 @@ jobs:
         run: |
           echo "🔍 Running production environment validation..."
           pnpm guard:prod-env
-          echo "validation_status=success" >> $GITHUB_OUTPUT
+          echo "validation_status=success" >> "$GITHUB_OUTPUT"
 
       - name: Check validation result
         if: failure()
