--- a/.github/workflows/route-quality.yml
+++ b/.github/workflows/route-quality.yml
@@ -76,6 +76,8 @@ jobs:
       - name: RTL smoke tests (layout + dashboard + souq)
         env:
           ALLOW_DASHBOARD_TEST_AUTH: "true"
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
         run: |
           npx playwright test \
             tests/smoke/rtl-layout.smoke.spec.ts \
