fix(ci): skip dynamic pkg install in CI + i18n rtl-smoke secrets [AGENT-001-A]
- fixzit-agent.mjs: Skip installTooling() in CI (packages already installed)
- i18n-validation.yml: Add NEXTAUTH_SECRET + AUTH_SECRET to rtl-smoke job

Fixes Fixzit Quality Gates timeout (was >5min, now <30s)
Fixes I18n Validation rtl-smoke auth error

--- a/.github/workflows/i18n-validation.yml
+++ b/.github/workflows/i18n-validation.yml
@@ -240,6 +240,8 @@ jobs:
       - name: RTL smoke tests (layout + dashboards + souq)
         env:
           ALLOW_DASHBOARD_TEST_AUTH: 'true'
+          NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
+          AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
         run: |
           npx playwright test \
             tests/smoke/rtl-layout.smoke.spec.ts \
