fix(ci): add NODE_OPTIONS for heap memory, fix test isolation [AGENT-001-A]
- Add NODE_OPTIONS='--max-old-space-size=4096' to typecheck, lint, qa-bundle jobs
- Add REDIS_URL env mock to export-worker.process.test.ts for CI Redis check
- Add vi.resetModules() to notifications.route.test.ts for proper mock isolation
- Add vi.resetModules() to audit.test.ts for all describe blocks

--- a/.github/workflows/ci-sharded.yml
+++ b/.github/workflows/ci-sharded.yml
@@ -129,6 +129,8 @@ jobs:
   # TypeScript Check
   typecheck:
     runs-on: ubuntu-latest
+    env:
+      NODE_OPTIONS: "--max-old-space-size=4096"
     steps:
       - name: 📦 Checkout
         uses: actions/checkout@v4
@@ -151,6 +153,8 @@ jobs:
   # ESLint Check
   lint:
     runs-on: ubuntu-latest
+    env:
+      NODE_OPTIONS: "--max-old-space-size=4096"
     steps:
       - name: 📦 Checkout
         uses: actions/checkout@v4
@@ -172,6 +176,8 @@ jobs:
 
   qa-bundle:
     runs-on: ubuntu-latest
+    env:
+      NODE_OPTIONS: "--max-old-space-size=4096"
     steps:
       - name: 📦 Checkout
         uses: actions/checkout@v4
