chore(ci): improve concurrency handling in guardrails workflow [AGENT-001-A]
- Use PR number in concurrency group for better deduplication

- Only cancel in-progress runs on push (not PR events)

--- a/.github/workflows/guardrails.yml
+++ b/.github/workflows/guardrails.yml
@@ -9,8 +9,8 @@ on:
     branches: [fix/consolidation-guardrails]
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: ${{ github.event_name == 'push' }}
 
 permissions:
   contents: read
