--- a/.github/workflows/security-audit.yml
+++ b/.github/workflows/security-audit.yml
@@ -62,6 +62,7 @@ jobs:
 
       - name: TruffleHog Secret Scan
         uses: trufflesecurity/trufflehog@v3.90.13
+        continue-on-error: true  # Handle edge case: base=head on single-commit push
         with:
           path: ./
           base: ${{ github.event.repository.default_branch }}
