--- a/package.json
+++ b/package.json
@@ -209,6 +209,7 @@
     "@smithy/smithy-client": "^4.10.2",
     "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-table": "^8.21.3",
+    "@types/xml-crypto": "^1.4.6",
     "@vercel/functions": "^3.3.3",
     "@vercel/speed-insights": "^1.3.1",
     "ai": "^5.0.116",
@@ -271,6 +272,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
+    "xml-crypto": "^6.1.2",
+    "xmlbuilder2": "^4.0.3",
     "yaml": "^2.8.2",
     "zod": "^4.2.1",
     "zustand": "^5.0.8"
